- objekte refactored - routen refactored - mapping-tabellen erstellt - routen angepasst
