# routes/scans.js
@@ -2,43 +2,20 @@ const operations = require('../mongodb/operations');
 const handler = require('../mongodb/handler');
 const router = require('express').Router();
 
+const locationMappingCollection = require('../mongodb/collections').LOCATION_MAPPING;
+
 /* Global */
 
 /* GET */
 /* Find ScanResult(s) */
 router.get('/find/scan', function (req, res) {
-    operations.findObject("rooms", (handler.checkIfValidQuery(req.query) ? req.query : null), function (err, item) {
-        getMinigamesForRoom(item._id, function (minigames) {
-            handler.dbResult(err, res,
-                {
-                    "room": item,
-                    "minigames": minigames
-                }
-                , "Das Item " + JSON.stringify(req.query).replace(/\"/g, '') + " existiert nicht.");
-        });
+    let identifier = req.query.identifier;
+    operations.findObject(locationMappingCollection,
+        {
+            "location.identifier": identifier
+        }, function (err, item) {
+            handler.dbResult(err, res, item, "Zu diesem Code konnten leider keine Minispiele gefunden werden. Tut uns Leid. Really, we are sorry :(");
     });
 });
-
-function getMinigamesForRoom(pRoomId, pCallback) {
-    operations.findObject(
-        "minigames",
-        {"room_id": pRoomId.toString()},
-        function (err, item) {
-            let stack = [];
-            if (err || item === null || item === undefined) {
-                pCallback(stack);
-            } else {
-                if (Array.isArray(item)) {
-                    item.forEach(function (element) {
-                        stack.push(element);
-                    });
-                } else {
-                    stack.push(item);
-                }
-                pCallback(stack);
-            }
-        }
-    );
-}
 
 module.exports = router;
